# aula09_bootcamp

./: etl.py  exemplo_00.py  exemplo_01.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml
